Changes to "Property Info" tab (Part 1, half fixes)

--- a/app/pages/properties/propertyinfo/propertyinfo.component.html
+++ b/app/pages/properties/propertyinfo/propertyinfo.component.html
@@ -7,8 +7,7 @@
                         [ngClass]="{'form-error': !propertyForm.controls['Name'].valid && errorForm}">
                         <a href="#heading-name_address" data-toggle="tab">Name and Address</a>
                     </li>
-                    <li class="wizzard-nav-pill"
-                        [ngClass]="{'form-error': !propertyForm.controls['BoxUrl'].valid && errorForm}">
+                    <li class="wizzard-nav-pill">
                         <a href="#heading-description" data-toggle="tab">Full Description</a>
                     </li>
                     <li class="wizzard-nav-pill">
