--- a/app/pages/properties/editproperty/editproperty.component.html
+++ b/app/pages/properties/editproperty/editproperty.component.html
@@ -8,8 +8,7 @@
                          propertyForm.controls['Name'] &&
                          propertyForm.controls['Bedrooms'] &&
                          propertyForm.controls['Sleeps'] &&
-                         propertyForm.controls['MinimumStay'] &&
-                         propertyForm.controls['BoxUrl']">
+                         propertyForm.controls['MinimumStay']">
                 <div class="card">
                     <div class="property-tabs card-content p-b-15">
                         <ul class="nav nav-pills main-nav-pills">
@@ -17,8 +16,7 @@
                                 [ngClass]="{'form-error': (!propertyForm.controls['Bathrooms'].valid ||
                                 !propertyForm.controls['Name'].valid ||
                                 !propertyForm.controls['Bedrooms'].valid ||
-                                !propertyForm.controls['Sleeps'].valid||
-                                !propertyForm.controls['BoxUrl'].valid) && errorForm}">
+                                !propertyForm.controls['Sleeps'].valid) && errorForm}">
                                 <a href="#metatab-info" role="tab" data-toggle="tab" class="">
                                     <i class="material-icons">store</i>
                                     Property Info
