--- a/app/pages/properties/propertyinfo/propertyinfo.component.html
+++ b/app/pages/properties/propertyinfo/propertyinfo.component.html
@@ -372,30 +372,15 @@
                 <div class="tab-pane" id="heading-conditions">
                     <div [formGroup]="propertyForm">
                         <div class="row">
-                            <div class="col-xs-12">
-                                <h5 class="m-b-none">Children Allowed</h5>
-                            </div>
-                            <div class="radio col-xs-12">
-                                <label>
-                                    <input type="radio" [value]="0" formControlName="ChildrenAllowed"> Children Welcome
-                                </label>
-                            </div>
-                            <div class="radio col-xs-12">
-                                <label>
-                                    <input type="radio" [value]="1" formControlName="ChildrenAllowed"> Ask Owner
-                                </label>
-                            </div>
-                            <div class="radio col-xs-12">
-                                <label>
-                                    <input type="radio" [value]="2" formControlName="ChildrenAllowed"> Not Suitable For
-                                    Children
-                                </label>
+                            <div class="col-xs-6">
+                                <div class="form-group label-floating"
+                                     [ngClass]="{'form-error': !propertyForm.controls['MinimumStay'].valid && errorForm}">
+                                    <label class="control-label">Minimum Days Stay</label>
+                                    <input type="number" min="0" class="form-control" formControlName="MinimumStay">
+                                </div>
                             </div>
                         </div>
                         <div class="row m-t-15">
-                            <div class="col-xs-12">
-                                <h5 class="m-b-none">Children Allowed</h5>
-                            </div>
                             <div class="checkbox col-xs-3">
                                 <label>
                                     <input type="checkbox" formControlName="SmokingAllowed"> Smoking Allowed
@@ -403,12 +388,27 @@
                             </div>
                             <div class="checkbox col-xs-3">
                                 <label>
-                                    <input type="checkbox" formControlName="WheelchairAccessible"> Wheelchairs Allowed
+                                    <input type="checkbox" formControlName="ChildrenAllowed"> Children Allowed
                                 </label>
                             </div>
                             <div class="checkbox col-xs-3">
                                 <label>
-                                    <input type="checkbox" formControlName="PetsAllowed"> Pets Allowed
+                                    <input type="checkbox" formControlName="ChildrenWelcome"> Children Welcome
+                                </label>
+                            </div>
+                            <div class="checkbox col-xs-3">
+                                <label>
+                                    <input type="checkbox" formControlName="PetsWelcome"> Pets Welcome
+                                </label>
+                            </div>
+                            <div class="checkbox col-xs-3">
+                                <label>
+                                    <input type="checkbox" formControlName="PetsConsidered"> Pets Considered
+                                </label>
+                            </div>
+                            <div class="checkbox col-xs-3">
+                                <label>
+                                    <input type="checkbox" formControlName="WheelchairAccessible"> Wheelchairs Allowed
                                 </label>
                             </div>
                             <div class="checkbox col-xs-3">
