Update availability icon padding fix

--- a/app/pages/properties/availability/availability.component.css
+++ b/app/pages/properties/availability/availability.component.css
@@ -48,12 +48,14 @@
     text-align: center;
 }
 
+.panels-wrp .right-panel .input-group .input-group-addon {
+    padding-left: 0;
+}
+
 .panels-wrp .right-panel .input-group .input-group-addon i {
     font-size: 18px;
     color: #5399bc;
     font-weight: 400;
-    padding-bottom: 2px;
-    padding-left: 6px;
 }
 
 .panels-wrp .right-panel .divider-line {
