Update availability buttons padding fix

--- a/app/pages/properties/availability/availability.component.html
+++ b/app/pages/properties/availability/availability.component.html
@@ -175,10 +175,12 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-xs-12">
-                                    <div class="btn-group-bottom">
-                                        <button class="btn btn-success pull-right font-16 m-r-10">Save</button>
-                                        <button class="btn btn-danger font-16 m-l-10">Cancel</button>
+                                <div class="row">
+                                    <div class="col-xs-12">
+                                        <div class="btn-group-bottom">
+                                            <button class="btn btn-success pull-right font-16 m-r-10">Save</button>
+                                            <button class="btn btn-danger font-16 m-l-10">Cancel</button>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
