--- a/app/components/calendar/calendar.component.css
+++ b/app/components/calendar/calendar.component.css
@@ -1,6 +1,20 @@
+.cart-content {
+	padding: 24px 0;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}
 .c-button-group {
+	width: 64px;
+	flex: 0 0 64px;
 	text-align: center;
 	margin-bottom: 40px;
+}
+.c-button-group.left {
+	margin-left: 40px;
+}
+.c-button-group.right {
+	margin-right: 40px;
 }
 .c-button-group .btn-white {
 	border: solid 1px #e8e8e8;
@@ -13,7 +27,13 @@
 	line-height: 40px;
 	display: inline-block;
 }
+.months-container {
+	display: flex;
+	flex-grow: 1;
+	flex-wrap: wrap;
+}
 .month-container {
+	width: 33%;
 	margin-bottom: 40px;
 }
 .month-container .month{
