--- a/app/components/calendar/calendar.component.css
+++ b/app/components/calendar/calendar.component.css
@@ -53,12 +53,52 @@
 	font-weight: 400;
 	line-height: 1.5;
 	color: #3a3a3a;
+	text-align: center;
 }
-.month-container table th.day, .month-container td.day.different-month {
+.month-container table th.day {
 	color: #a2a2a2;
 }
-.month-container {
-
+.month-container td.day.different-month {
+	color: transparent;
+}
+.month-container table .day .cell {
+	position:relative;
+	overflow:hidden;
+}
+.month-container table .day .period {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+.month-container table .day .date {
+	position: relative;
+	z-index: 102;
+}
+.month-container table .day .internal-period-start {
+	background: linear-gradient(to right bottom, transparent 50%, rgba(229, 138, 229, 0.2) 50%);
+	z-index: 100;
+}
+.month-container table .day .internal-period-end {
+	background: linear-gradient(to left top, transparent 50%, rgba(229, 138, 229, 0.2) 50%);
+	z-index: 101;
+}
+.month-container table .day .external-period-start {
+	background: linear-gradient(to right bottom, transparent 50%, rgba(83, 153, 188, 0.2) 50%);
+	z-index: 100;
+}
+.month-container table .day .external-period-end {
+	background: linear-gradient(to left top, transparent 50%, rgba(83, 153, 188, 0.2) 50%);
+	z-index: 101;
+}
+.month-container table .day .other-period-start {
+	background: linear-gradient(to right bottom, transparent 50%, rgba(237, 237, 96, 0.2) 50%);
+	z-index: 100;
+}
+.month-container table .day .other-period-end {
+	background: linear-gradient(to left top, transparent 50%, rgba(237, 237, 96, 0.2) 50%);
+	z-index: 101;
 }
 .form-text .control-label {
 	font-size: 16px;
