--- a/app/components/calendar/calendar.component.html
+++ b/app/components/calendar/calendar.component.html
@@ -55,4 +55,9 @@
             </div>
         </div>
     </div>
+    <div class="row legend-block">
+        <div class="col-xs-4 legend legend-external">External Booking</div>
+        <div class="col-xs-4 legend legend-internal">Internal Booking</div>
+        <div class="col-xs-4 legend legend-other">Other Booking</div>
+    </div>
 </div>
