--- a/app/components/calendar/calendar.component.html
+++ b/app/components/calendar/calendar.component.html
@@ -58,6 +58,6 @@
     <div class="row legend-block">
         <div class="col-xs-4 legend legend-external">External Booking</div>
         <div class="col-xs-4 legend legend-internal">Internal Booking</div>
-        <div class="col-xs-4 legend legend-other">Other Booking</div>
+        <div class="col-xs-4 legend legend-other">Other Blocking Periods</div>
     </div>
 </div>
