--- a/app/pages/properties/availability/availability.component.html
+++ b/app/pages/properties/availability/availability.component.html
@@ -179,7 +179,7 @@
                                     <div class="col-xs-12">
                                         <div class="btn-group-bottom">
                                             <button class="btn btn-success pull-right font-16 m-r-10">Save</button>
-                                            <button class="btn btn-danger font-16 m-l-10">Cancel</button>
+                                            <button class="btn btn-danger font-16 m-l-10" (click)="toggleUpdateBlock()">Cancel</button>
                                         </div>
                                     </div>
                                 </div>
