Update property availability

--- a/app/components/calendar-list/calendar-list.component.html
+++ b/app/components/calendar-list/calendar-list.component.html
@@ -40,7 +40,7 @@
                                 <button class="btn btn-simple btn-view-more btn-icon">
                                     <i class="material-icons">more</i>View More
                                 </button>
-                                <button class="btn btn-simple btn-edit btn-icon">
+                                <button class="btn btn-simple btn-edit btn-icon" (click)="editEvent(1)">
                                     <i class="material-icons">edit</i>Edit
                                 </button>
                                 <button class="btn btn-simple btn-delete btn-icon"
@@ -80,7 +80,7 @@
                                 <button class="btn btn-simple btn-view-more btn-icon">
                                     <i class="material-icons">more</i>View More
                                 </button>
-                                <button class="btn btn-simple btn-edit btn-icon">
+                                <button class="btn btn-simple btn-edit btn-icon" (click)="editEvent(2)" >
                                     <i class="material-icons">edit</i>Edit
                                 </button>
                                 <button class="btn btn-simple btn-delete btn-icon"
