--- a/app/components/calendar/calendar.component.css
+++ b/app/components/calendar/calendar.component.css
@@ -28,17 +28,19 @@
 	display: inline-block;
 }
 .months-container {
+	width: 100%;
 	display: flex;
-	flex-grow: 1;
+	flex-direction: row;
+	justify-content: space-around;
 	flex-wrap: wrap;
 }
 .month-container {
-	width: 33%;
-	margin-bottom: 40px;
+	flex-grow:1;
+	flex-basis:33%;
+	margin-bottom: 30px;
 }
 .month-container .month{
-	max-width: 80%;
-	margin: 0 auto;
+	margin: 0 10%;
 }
 .month-container table {
 	width: 100%;
