--- a/app/components/dashboard-filter/dashboard-filter.component.html
+++ b/app/components/dashboard-filter/dashboard-filter.component.html
@@ -23,11 +23,13 @@
                     <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
                         <datetimepicker-field-cmp [data]="{title: 'Check In'}"
                                                   [classes]="{withIcon: true}"
+                                                  [idPicker]="'checkIn'"
                                                   [field]="filterForm.controls.CheckIn"></datetimepicker-field-cmp>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
                         <datetimepicker-field-cmp [data]="{title: 'Check Out'}"
                                                   [classes]="{withIcon: true}"
+                                                  [idPicker]="'checkOut'"
                                                   [field]="filterForm.controls.CheckOut"></datetimepicker-field-cmp>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
