--- a/app/components/enquiry/proposal/proposal.component.html
+++ b/app/components/enquiry/proposal/proposal.component.html
@@ -41,13 +41,15 @@
                 <div class="col-xs-6 normalize-datetitme">
                     <datetimepicker-field-cmp [data]="{title: 'Check In'}"
                                               [classes]="{withIcon: true}"
+                                              [idPicker]="'checkIn'"
                                               [field]="proposalManagerForm.controls.CheckIn"></datetimepicker-field-cmp>
                 </div>
                 <div class="col-xs-6 normalize-datetitme">
                     <div class="p-r-15">
                         <datetimepicker-field-cmp [data]="{title: 'Check Out'}"
                                                   [classes]="{withIcon: true}"
-                                                  [field]="proposalManagerForm.controls.CheckOut"></datetimepicker-field-cmp>
+                                                  [[idPicker]="'checkOut'"
+                                                  field]="proposalManagerForm.controls.CheckOut"></datetimepicker-field-cmp>
                     </div>
                 </div>
             </div>
