--- a/app/components/modal/enquiry/enquiry.component.html
+++ b/app/components/modal/enquiry/enquiry.component.html
@@ -66,11 +66,13 @@
                         <div class="col-xs-6">
                             <datetimepicker-field-cmp [data]="{title: 'Check In'}"
                                                       [classes]="{withIcon: true}"
+                                                      [idPicker]="'checkIn'"
                                                       [field]="enquiryForm.controls.CheckIn"></datetimepicker-field-cmp>
                         </div>
                         <div class="col-xs-6">
                             <datetimepicker-field-cmp [data]="{title: 'Check Out'}"
                                                       [classes]="{withIcon: false}"
+                                                      [idPicker]="'checkOut'"
                                                       [field]="enquiryForm.controls.CheckOut"></datetimepicker-field-cmp>
                         </div>
                     </div>
